<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainActivity"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textTitleTV"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/startButtonBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textStartButtonBTN"/>

    <TextView
        android:id="@+id/exerciseTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textExerciseTV"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"/>
    </ScrollView>

    <TextView
        android:id="@+id/timerTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textTimerTV"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/completedButtonBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/textCompletedButtonBTN"/>

    <Button
        android:id="@+id/returnButtonBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textReturnButtonBTN"/>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageViewIV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"/>
</LinearLayout>